プルリク時にのみCDワークフローが実行するようにした

--- a/.github/workflows/frontend.yaml
+++ b/.github/workflows/frontend.yaml
@@ -1,9 +1,14 @@
 name: deploy frontend
 
 on:
-    push:
+    # push:
+    #     branches:
+    #         - main
+    pull_request:
         branches:
             - main
+        types:
+            - "closed"
 
 jobs:
     deploy-frontend:
